Created Login Page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,19 +4,37 @@
 
 @layer components {
     .text-input {
-        @apply block w-full px-3 py-2 mt-1 transition-colors duration-300 ease-in-out bg-transparent border shadow-sm;
-    }
-    .normal-input {
-        @apply border-primary placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500;
+        @apply block w-full px-3 py-2 mt-1 transition-colors duration-300 ease-in-out bg-transparent border shadow-sm border-secondary placeholder-slate-700 focus:outline-none focus:border-secondary focus:ring-1 focus:ring-secondary;
     }
     .error-input {
-        @apply border-red-600 ring-red-600;
+        @apply block w-full px-3 py-2 mt-1 transition-colors duration-300 ease-in-out bg-transparent border border-red-600 shadow-sm ring-red-600 ring-1 placeholder-slate-700 focus:outline-none;
+    }
+    /* BURGER BUTTON */
+    .bar1,
+    .bar2,
+    .bar3 {
+        @apply w-8 m-[5px] h-[3px] transition-transform duration-300 ease-in-out bg-white;
+    }
+    .change .bar1 {
+        @apply translate-y-[8px] -rotate-45;
+    }
+    .change .bar2 {
+        @apply opacity-0;
+    }
+    .change .bar3 {
+        @apply -translate-y-[8px] rotate-45;
     }
 }
 
 @layer utilities {
+    .login-house {
+        animation: fadeInAnimation ease 0.4s;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+    }
+
     #form {
-        animation: fadeInAnimation ease 1s;
+        animation: fadeInAnimation ease 1.3s;
         animation-iteration-count: 1;
         animation-fill-mode: forwards;
     }
@@ -31,5 +49,35 @@
             opacity: 1;
             transform: translateY(0);
         }
+    }
+    .grid-template-row-0 {
+        grid-template-rows: 0fr;
+    }
+
+    .grid-template-row-1 {
+        grid-template-rows: 1fr;
+    }
+    .height-transition {
+        display: grid;
+        transition: grid-template-rows 0.3s ease-in-out;
+    }
+    .height-transition > div {
+        overflow: hidden;
+    }
+
+    .grid-template-col-0 {
+        grid-template-columns: 0fr;
+    }
+
+    .grid-template-col-1 {
+        grid-template-columns: 1fr;
+    }
+    .width-transition {
+        display: grid;
+        transition: grid-template-columns 0.3s ease-in-out;
+    }
+
+    .width-transition > ul {
+        overflow-x: hidden;
     }
 }
