--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,6 +24,14 @@
     .change .bar3 {
         @apply -translate-y-[8px] rotate-45;
     }
+
+    .active-link {
+        @apply flex items-center w-full gap-3 p-2 text-white transition-colors duration-300 ease-in-out rounded bg-secondary hover:bg-secondary/80;
+    }
+
+    .inactive-link {
+        @apply flex items-center w-full gap-3 p-2 text-black transition-colors duration-300 ease-in-out bg-transparent rounded hover:bg-gray-300;
+    }
 }
 
 @layer utilities {
@@ -77,7 +85,7 @@
         transition: grid-template-columns 0.3s ease-in-out;
     }
 
-    .width-transition > ul {
+    .width-transition > div {
         overflow-x: hidden;
     }
 }
