--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -26,11 +26,15 @@
     }
 
     .active-link {
-        @apply flex items-center w-full gap-3 p-2 text-white transition-colors duration-300 ease-in-out rounded bg-secondary hover:bg-secondary/80;
+        @apply flex items-center justify-between w-full gap-3 p-2 text-white transition-colors duration-300 ease-in-out rounded bg-secondary hover:bg-secondary/80;
     }
 
     .inactive-link {
-        @apply flex items-center w-full gap-3 p-2 text-black transition-colors duration-300 ease-in-out bg-transparent rounded hover:bg-gray-300;
+        @apply flex items-center justify-between w-full gap-3 p-2 text-black transition-colors duration-300 ease-in-out bg-transparent rounded hover:bg-gray-300;
+    }
+
+    .arrow {
+        @apply w-6 h-6 transition-transform duration-200 ease-in-out rotate-0;
     }
 }
 
@@ -69,7 +73,7 @@
         display: grid;
         transition: grid-template-rows 0.3s ease-in-out;
     }
-    .height-transition > div {
+    .height-transition > ul {
         overflow: hidden;
     }
 
@@ -86,6 +90,6 @@
     }
 
     .width-transition > div {
-        overflow-x: hidden;
+        overflow: hidden;
     }
 }
