--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -164,3 +164,13 @@ input[type="number"]::-webkit-outer-spin-button {
     margin: 0;
     padding: 0;
 }
+
+/* add this to and element if want a no scrollbar */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.hide-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
